--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "lucide-react": "^0.400.0",
     "next": "^14.2.0",
+    "next-intl": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.4.14"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.5",
     "@types/node": "^20.12.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
